# BoggleSolver

./: .gitignore  BoggleSolver.sln  CMakeLists.txt  TODO.txt  TestResults.txt
BoggleSolver/: BoggleSolver.vcxproj  BoggleSolver.vcxproj.filters  CMakeLists.txt  Main.cpp
BoggleSolver/Include/: Board.h  BoggleSolver.h  Node.h  Results.h  Timer.h  Tree.h  Utils.h
BoggleSolver/Source/: Board.cpp  BoggleSolver.cpp  FuncToTest.cpp  Node.cpp  Timer.cpp  Tree.cpp  Utils.cpp
BoggleSolverTests/: BoggleSolverTests.vcxproj  BoggleSolverTests.vcxproj.filters  CMakeLists.txt  Main.cpp
BoggleSolverTests/Tests/: Common.h  SampleTest.cpp  SolverTests.cpp  TreeTests.cpp
BoggleSolverTests/googleTestLib/gtest/: gtest.h
Resources/: Board1000x1000.txt  Board100x100.txt  Board2x3.txt  Board300x300.txt  Board3x2.txt  Board3x3Test1.txt  Board500x500.txt  TestDictionary.txt
